// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jobfs > readSource > matches job 1`] = `
{
  "__input": [
    PathBase {
      "relativeTo": PathBase {
        "relativeTo": PathBase {
          "relativeTo": PathHandleBase {},
          "subpath": "src/tasks",
        },
        "subpath": "__fixtures__",
      },
      "subpath": "emptyobject.json",
    },
  ],
  "__task": GeneratedTaskReadSource {},
  Symbol(workelement.slugify): [Function],
}
`;

exports[`jobfs > readSource > matches job slug 1`] = `
SlugBase {
  Symbol(workelement.slug): "readSource()",
}
`;

exports[`jobfs > readSource > matches output 1`] = `{}`;

exports[`jobfs > readSource > matches output slug 1`] = `
{
  "isOutput": true,
  Symbol(workelement.slug): "readSource()",
}
`;
